--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 							<h1><span>Monique Dias</span></h1>
-							<h3><span>English/TEFAL/Cambridge</span></h3>
+							<h3><span>English / TEFL/ Cambridge</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
