--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
+						<li><span class="first-block">WhatsApp:</span><span class="second-block">+ 1235 2355 98</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						
 					</ul>
 				</div>
 				<div class="col-md-8">
@@ -548,8 +547,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>Choose a time that suits you directly from my calander. Make a booking with easy secure payment option</p>
+					<p><a href="#" class="btn btn-default btn-lg">Online Booking</a></p>
 				</div>
 			</div>
 		</div>
@@ -560,7 +559,7 @@
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
-			<h2>Contact</h2>
+			<h2>Contact me to answer any questions</h2>
 			<form action="#">
 				<div class="row form-group">
 					<div class="col-md-6">
