--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 		</div>
 	</header>
 
+  <!-- New section -->
+
 	<div id="fh5co-about" class="animate-box">
 		<div class="container">
 			<div class="row">
@@ -101,6 +103,8 @@
 		</div>
 	</div>
 
+  <!-- New section -->
+
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
 			<div class="row animate-box">
@@ -110,7 +114,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
-					<ul class="timeline">
+				  <ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
@@ -203,12 +207,13 @@
 								</div>
 							</div>
 						</li>
-			    	</ul>
+			    </ul>
 				</div>
 			</div>
 		</div>
 	</div>
 	
+  <!-- New section -->
 
 	<div id="fh5co-features" class="animate-box">
 		<div class="container">
@@ -278,7 +283,7 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Idustry spacific english</h3>
+								<h3>Idustry spacific English</h3>
 								<p>Here we focus on improving your english to better your knowledge of language and terminology needed in a specific industry</p>
 							</div>
 						</div>
@@ -290,7 +295,7 @@
 								<i class="icon-chat"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Conversational snglish</h3>
+								<h3>Conversational English</h3>
 								<p>Lets get talking. improve your everyday english. become capable to hold a conversation with siome one in english.talk to me and i talk to you.</p>
 							</div>
 						</div>
@@ -300,13 +305,13 @@
 		</div>
 	</div>
 
-	
+	<!-- New section -->
 
 	<div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>Testimonials</h2>
 				</div>
 			</div>
 			<div class="row">
