Add responsive navbar and update images/content
Introduced a fixed, responsive navbar with burger menu functionality and corresponding CSS. Updated profile and portfolio images to use new Monique assets, replaced blog section with a placeholder, and adjusted content to reflect linguistics focus. Added new images and updated footer attribution.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,38 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
+    <div class="navbar">
+      <nav>
+        <div class="navbar_inner">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="navbar-brand" style="padding: 10px;">
+                  <a href="#page">
+                    <h2 class="logo">LinguaFlow</h2>
+                  </a>
+                </div>
+              </div>
+              <div class="col-md-9">
+                <div class="navbar-toggle" id="navbar-toggle">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <ul class="navbar-nav" id="navbar-nav">
+                  <li><a href="#fh5co-header">Home</a></li>
+                  <li><a href="#fh5co-about">About</a></li>
+                  <li><a href="#fh5co-resume">Resume</a></li>
+                  <li><a href="#fh5co-features">Services</a></li>
+                  <li><a href="#fh5co-work">Testimonials</a></li>
+                  <li><a href="#fh5co-consult">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -51,7 +83,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/Monique\ headshot.png); box-shadow: 10px 5px 3px 5px whitesmoke; margin-top: 40px ;"></div>
 							<h1><span>Monique Dias</span></h1>
 							<h3><span>English / TEFL/ Cambridge</span></h3>
 							<p>
@@ -122,7 +154,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
+									<h3 class="timeline-title">Junior linguistics lecturer</h3>
 									<span class="company">Company Name - 2016 - Current</span>
 								</div>
 								<div class="timeline-body">
@@ -316,17 +348,18 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="#" class="work" style="background-image: url(images/Monique\ Fullbody.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+            
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -334,7 +367,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -342,7 +375,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -350,7 +383,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -358,7 +391,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -366,7 +399,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -374,7 +407,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Persons Name</h3>
 							<span>Caption</span>
 						</div>
 					</a>
@@ -382,65 +415,7 @@
 			</div>
 		</div>
 	</div>
-
-	<div id="fh5co-blog">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Post on Medium</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
-						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Capture Living On Uderwater</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
+<!-- add later with links to FB nad google calander  -----------------
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
@@ -453,9 +428,9 @@
 			</div>
 		</div>
 	</div>
-
+ -- add later with links to FB nad google calander  ----------------->
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+		<div class="video fh5co-video" style="background-image: url(images/lig-levels.png);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
@@ -502,7 +477,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>, maintained by Raeven Goncalves</p>
 				</div>
 			</div>
 		</div>
@@ -530,6 +505,37 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
+
+	<!-- Burger Menu JavaScript -->
+	<script>
+		document.addEventListener('DOMContentLoaded', function() {
+			const navbarToggle = document.getElementById('navbar-toggle');
+			const navbarNav = document.getElementById('navbar-nav');
+			
+			// Toggle mobile menu
+			navbarToggle.addEventListener('click', function() {
+				navbarToggle.classList.toggle('active');
+				navbarNav.classList.toggle('active');
+			});
+			
+			// Close menu when clicking on a link
+			const navLinks = navbarNav.querySelectorAll('a');
+			navLinks.forEach(link => {
+				link.addEventListener('click', function() {
+					navbarToggle.classList.remove('active');
+					navbarNav.classList.remove('active');
+				});
+			});
+			
+			// Close menu when clicking outside
+			document.addEventListener('click', function(event) {
+				if (!navbarToggle.contains(event.target) && !navbarNav.contains(event.target)) {
+					navbarToggle.classList.remove('active');
+					navbarNav.classList.remove('active');
+				}
+			});
+		});
+	</script>
 
 	</body>
 </html>
