--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <div class="col-md-3">
                 <div class="navbar-brand" style="padding: 10px;">
                   <a href="#page">
-                    <h2 class="logo">LinguaFlow</h2>
+                    <h2 class="logo" style="font-size: larger;">LinguaFlow</h2>
                   </a>
                 </div>
               </div>
