Update navbar styling and remove Home link
Adjusted inline styles for the navbar and logo in index.html to improve layout and appearance. Removed the Home link from the navigation menu. Added CSS for anchor tag padding in style.css.

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-    <div class="navbar">
+    <div class="navbar" style="height: 70px;">
       <nav>
-        <div class="navbar_inner">
+        <div class="navbar_inner" style="padding-bottom: 0;">
           <div class="container">
             <div class="row">
-              <div class="col-md-3">
-                <div class="navbar-brand" style="padding: 10px;">
+              <div class="col-md-3" style="margin-bottom: 10px;">
+                <div class="navbar-brand" style="padding: 00px 10px 0px 10px;">
                   <a href="#page">
-                    <h2 class="logo" style="font-size: larger;">LinguaFlow</h2>
+                    <h2 class="logo" style="font-size: 35px; ">LinguaFlow</h2>
                   </a>
                 </div>
               </div>
@@ -63,7 +63,6 @@
                   <span></span>
                 </div>
                 <ul class="navbar-nav" id="navbar-nav">
-                  <li><a href="#fh5co-header">Home</a></li>
                   <li><a href="#fh5co-about">About</a></li>
                   <li><a href="#fh5co-resume">Resume</a></li>
                   <li><a href="#fh5co-features">Services</a></li>
