--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/Monique\ headshot.png); box-shadow: 10px 5px 3px 5px whitesmoke; margin-top: 40px ;"></div>
 							<h1><span>Monique Dias</span></h1>
-							<h3><span>English / Cambridge / Conversational Portuguese</span></h3>
+							<h3><span>English / Cambridge prep / Conversational Portuguese</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
