--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 
   <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<link rel="canonical" href="https://www.linguaflowonline.com/">
+	<meta property="og:title" content="English With Monique"/>
+	<meta property="og:image" content="https://www.linguaflowonline.com/images/logo_no_bg.png"/>
+	<meta property="og:url" content="https://www.linguaflowonline.com/"/>
+	<meta property="og:site_name" content="LinguaFlow"/>
+	<meta property="og:description" content="Personalized English lessons, Cambridge exam prep, and conversational Portuguese with Monique."/>
+	<meta name="twitter:title" content="English With Monique" />
+	<meta name="twitter:image" content="https://www.linguaflowonline.com/images/logo_no_bg.png" />
+	<meta name="twitter:url" content="https://www.linguaflowonline.com/" />
+	<meta name="twitter:card" content="summary_large_image" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
