--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Monique Dias</span></li>
 						<li><span class="first-block">WhatsApp:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">linguaflow.online@gmail.com</span></li>
 						
 					</ul>
 				</div>
