Revise profile and timeline content, update styles
Updated the profile section in index.html with a detailed professional summary and expanded timeline entries to reflect accurate job titles, responsibilities, and education history. Enhanced timeline formatting and added new CSS rules for improved layout and readability, including margin adjustments and custom list styling.

--- a/index.html
+++ b/index.html
@@ -113,21 +113,34 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Monique Dias</span></li>
-						<li><span class="first-block">WhatsApp:</span><span class="second-block">+ 1235 2355 98</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">linguaflow.online@gmail.com</span></li>
-						
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>
+            Hi, I’m Monique! I’m an experienced EFL teacher with a passion for helping people grow their confidence in English—whether 
+            it’s for business, academics, exams, or everyday communication. Over my more than 16 years of teaching, 
+            I’ve had the privilege of working with students of all ages and backgrounds, from beginners taking their first steps 
+            to advanced learners preparing for Cambridge and IELTS exams.
+          </p>
+					<p>
+            My journey started in Johannesburg, where I studied English, Linguistics, and Literary Theory 
+            before going on to teach at the University of Johannesburg. Since then, I’ve taught in language schools, developed learning materials, 
+            and even worked in sales capability and marketing—experiences that gave me a unique perspective on communication and learning.
+          </p>
+          <p>
+              These days, I’m based in Portugal, teaching English across a variety of contexts. 
+              I enjoy creating engaging, practical lessons that are tailored to my students’ goals, 
+              and I’m always looking for new ways to make learning both effective and enjoyable.
+              For me, teaching isn’t just about grammar and vocabulary, it’s about building confidence, 
+              opening doors, and helping students connect through language.
+          </p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -154,11 +167,27 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior linguistics lecturer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title" style="font-weight: bold;">English Second Language Teacher</h3>
+									<span class="company">Open School – Escolas de Línguast</span>
+									<span class="company">Sep 2016 – Jul 2025 · 8 yrs 11 mos. | Mirandela, Portugal · On-site</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>
+                    <ul>
+                      <li class="timeline-list">
+                        •	Taught engaging <span style="font-weight: 600;">ESL</span> classes from <span style="font-weight: 600;">A2 to C2</span> levels, boosting student proficiency and confidence.
+                      </li>
+                      <li class="timeline-list">
+                        •	Designed and delivered <span style="font-weight: 600;">formative assessments</span>, adapting lessons to individual needs.
+                      </li>
+                      <li class="timeline-list">
+                        •	Developed creative educational resources, fostering a dynamic and motivating classroom.
+                      </li>
+                      <li class="timeline-list">
+                        •	Successfully prepared students for <span style="font-weight: 600;">Cambridge B1, B2, C1, and C2 exams.</span>
+                      </li>
+                    </ul>
+                  </p>
 								</div>
 							</div>
 						</li>
@@ -166,11 +195,24 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title" style="font-weight: bold;" >Junior Sales Capability Manager</h3>
+									<span class="company">Pernod Ricard Sub-Saharan Africa</span>
+									<span class="company">Jan 2015 – Feb 2016 · 1 yr 2 mos. | Woodmead, Johannesburg</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>
+                    <ul>
+                      <li class="timeline-list">
+                        •	Supported regional sales teams through clear communication of capability strategies.
+                      </li>
+                      <li class="timeline-list">
+                        •	Coordinated and implemented <span style="font-weight: 600;">sales capability projects and processes</span> across affiliates.
+                      </li>
+                      <li class="timeline-list">
+                        •	Organized and managed training sessions, contributing to stronger sales performance.
+                      </li>
+                    </ul>
+                  </p>
 								</div>
 							</div>
 						</li>
@@ -178,11 +220,100 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
+									<h3 class="timeline-title">Admin, Marketing & Sales Assistant</h3>
 									<span class="company">Company Name - 2010 - 2012</span>
+									<span class="company">Sep 2014 – Dec 2014 · 4 mos. | Johannesburg, South Africa</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>
+                    <ul>
+                      <li class="timeline-list">
+                        •	Built strong client relationships, improving <span style="font-weight: 600;">customer loyalty and satisfaction.</span>
+                      </li>
+                      <li class="timeline-list">
+                        •	Created marketing campaigns that led to a <span style="font-weight: 600;">20% increase in engagement</span>
+                      </li>
+                      <li class="timeline-list">
+                        •	Managed <span style="font-weight: 600;">Google AdWords campaigns</span>, cutting cost-per-click by 15%.
+                      </li>
+                    </ul>
+                  </p>
+								</div>
+							</div>
+						</li>
+            <li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Training & Marketing Manager</h3>
+									<span class="company">International House Johannesburg – The Language Lab</span>
+									<span class="company">Mar 2011 – Aug 2014 · 3 yrs 6 mos. | Braamfontein, Johannesburg</span>
+								</div>
+								<div class="timeline-body">
+									<p>
+                    <ul>
+                      <li class="timeline-list">
+                        •	Organized <span style="font-weight: 600;">ESL business courses</span> tailored to professionals.
+                      </li>
+                      <li class="timeline-list">
+                        •	Produced impactful <span style="font-weight: 600;"> marketing materials</span> and managed social media presence.
+                      </li>
+                      <li class="timeline-list">
+                        •	Acted as liaison between trainers and clients, ensuring smooth communication and delivery.
+                      </li>
+                    </ul>
+                  </p>
+								</div>
+							</div>
+						</li>
+            <li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title" style="font-weight: 600;">Senior EFL Teacher</h3>
+									<span class="company">International House Johannesburg – The Language Lab</span>
+									<span class="company">May 2010 – Aug 2014 · 4 yrs 4 mos  | Johannesburg, South Africa</span>
+								</div>
+								<div class="timeline-body">
+									<p>
+                    <ul>
+                      <li class="timeline-list">
+                        •	Taught English to international students from beginner to advanced levels.
+                      </li>
+                      <li class="timeline-list">
+                        •	Conducted <span style="font-weight: 600;">monthly assessments and reports </span>
+                          to measure progress.
+                      </li>
+                      <li class="timeline-list">
+                        •	Specialized in Aviation English and worked as an IELTS examiner (speaking & writing).
+                      </li>
+                    </ul>
+                  </p>
+								</div>
+							</div>
+						</li>
+            <li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Junior Lecturer</h3>
+									<span class="company">University of Johannesburg</span>
+									<span class="company">2006 – 2009 · 3 yrs | Johannesburg, South Africa</span>
+								</div>
+								<div class="timeline-body">
+									<p>
+                    <ul>
+                      <li class="timeline-list">
+                        •	Developed and delivered course material in <span style="font-weight: 600;" > Linguistics and Literary Theory.</span>
+                      </li>
+                      <li class="timeline-list">
+                        •	Set exams, created assessments, and provided constructive student feedback.
+                      </li>
+                      <li class="timeline-list">
+                        •	Conducted lectures and tutorials, while mentoring students in academic skills.
+                      </li>
+                    </ul>
+                  </p>
 								</div>
 							</div>
 						</li>
@@ -195,11 +326,14 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Bachelor of Arts Honours (Postgraduate) in Applied Linguistics. </h3>
+									<span class="company">University of Johannesburg</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>
+                    Studies and research completed in the areas of translation theory, genre studies and literacy, interpreting, disciplines of linguistics
+                    and research methodology.
+                  </p>
 								</div>
 							</div>
 						</li>
@@ -207,8 +341,8 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<h3 class="timeline-title">Bachelors of Arts Degree (BA) Language Practitioner </h3>
+									<span class="company">University of Johannesburg</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -219,23 +353,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
+									<h3 class="timeline-title">CELTA (Certificate in English Language Teaching to Adults)</h3>
+									<span class="company">University of Cambridge ESOL Examinations – Pass B (June 2010)</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								</div>
 							</div>
 						</li>
