Update General English section and add profile image
Replaced the General English section text in index.html with a more detailed description of lesson content and benefits. Added Monique_profile-img2.jpeg to the images directory.

--- a/index.html
+++ b/index.html
@@ -385,7 +385,11 @@
 							</span>
 							<div class="feature-copy">
 								<h3>General English</h3>
-								<p>Brush up on your English.do you need extra lessons to improve your overall english</p>
+								<p>
+                  Strengthen your skills across grammar, vocabulary, reading, writing, listening and speaking. 
+                  Lessons are tailored to your level and goals, helping you communicate clearly and 
+                  confidently in everyday situations.
+                </p>
 							</div>
 						</div>
 					</div>
