--- a/index.html
+++ b/index.html
@@ -401,7 +401,11 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Business English</h3>
-								<p>Email writing etc, And what ever else goes with business english</p>
+								<p>
+                  Develop the language you need for professional success. Focus on 
+                  meetings, presentations, negotiations, reports, emails and workplace communication
+                  to boost your confidence and effectiveness in an international business environment.
+                </p>
 							</div>
 						</div>
 
@@ -413,7 +417,11 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Cambridge Exam Preperation</h3>
-								<p>Let me help you get ready to write the cambridge english exam</p>
+								<p>
+                  Prepare thoroughly for Cambridge English examinations (KET, PET, FCE, CAE, CPE). 
+                  Lessons include exam techniques, practice materials and targeted feedback to help
+                  you approach your exam with confidence.
+                </p>
 							</div>
 						</div>
 					</div>
@@ -428,8 +436,12 @@
 								<i class="icon-bargraph"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Thee pillars of English</h3>
-								<p>Reading, Writing and speaking english. comprehensive and intensive lessons of the english language</p>
+								<h3>English for Specific Purposes</h3>
+								<p>
+                  Improve your English for a particular field or area of interest — such as travel, hospitality, medicine, 
+                  law or another profession. Lessons are customised to provide the vocabulary and communication skills 
+                  you require for your work or studies.
+                </p>
 							</div>
 						</div>
 
@@ -441,8 +453,12 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Idustry spacific English</h3>
-								<p>Here we focus on improving your english to better your knowledge of language and terminology needed in a specific industry</p>
+								<h3>English Tutoring</h3>
+								<p>
+                  Receive one-to-one support tailored to your individual needs. Whether you’d like to review 
+                  challenging areas, strengthen specific skills or simply gain more practice, 
+                  tutoring sessions are flexible and designed to help you progress at your own pace.
+                </p>
 							</div>
 						</div>
 
@@ -454,7 +470,11 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Conversational English</h3>
-								<p>Lets get talking. improve your everyday english. become capable to hold a conversation with siome one in english.talk to me and i talk to you.</p>
+								<p>
+                  Practise speaking naturally through engaging discussions on topics that interest you. 
+                  These sessions are designed to build fluency, expand your vocabulary and help you feel 
+                  more at ease using English in real-life contexts.
+                </p>
 							</div>
 						</div>
 					</div>
