Add Conversational Portuguese section and style updates
Introduced a new 'Conversational Portuguese' feature section in index.html with corresponding CSS for centering and styling. Increased feature image size and added styles for email warnings. Also added a new image asset 'barca_test_img.JPG'.

--- a/index.html
+++ b/index.html
@@ -444,9 +444,7 @@
                 </p>
 							</div>
 						</div>
-
 					</div>
-
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
@@ -461,7 +459,6 @@
                 </p>
 							</div>
 						</div>
-
 					</div>
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
@@ -471,6 +468,21 @@
 							<div class="feature-copy">
 								<h3>Conversational English</h3>
 								<p>
+                  Practise speaking naturally through engaging discussions on topics that interest you. 
+                  These sessions are designed to build fluency, expand your vocabulary and help you feel 
+                  more at ease using English in real-life contexts.
+                </p>
+							</div>
+						</div>
+					</div>
+          <div class="col-md-12 text-center">
+						<div class="feature-left feature_left2">
+							<span class="icon">
+								<i class="icon-chat" id="port_chat"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Conversational Portuguese</h3>
+								<p class="con_port_txt" style="max-width: 500px;">
                   Practise speaking naturally through engaging discussions on topics that interest you. 
                   These sessions are designed to build fluency, expand your vocabulary and help you feel 
                   more at ease using English in real-life contexts.
@@ -494,12 +506,12 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/Monique\ Fullbody.png);">
-						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
-						</div>
-					</a>
+												<a href="#" class="work" style="background-image: url(images/Monique\ Fullbody.png);">
+								<div class="desc">
+									<h3>Persons Name</h3>
+									<span>Caption</span>
+								</div>
+							</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
@@ -610,6 +622,7 @@
 						<textarea name="Message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us" required></textarea>
 					</div>
 				</div>
+        
 				<div class="form-group">
 					<button type="submit" class="btn btn-primary" id="submitBtn">
 						<span id="submitText">Send Message</span>
