Update profile and testimonial section in index.html
Replaced the profile image with a new JPEG and updated the testimonial section with a new student image, name, and detailed feedback. These changes improve the visual presentation and provide a more authentic testimonial.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/Monique\ headshot.png); box-shadow: 10px 5px 3px 5px whitesmoke; margin-top: 40px ;"></div>
+							<div class="profile-thumb" style="background: url(images/Monique_profile-img2.jpeg); box-shadow: 10px 5px 3px 5px whitesmoke; margin-top: 40px ;"></div>
 							<h1><span>Monique Dias</span></h1>
 							<h3><span>English / Cambridge prep / Conversational Portuguese</span></h3>
 							<p>
@@ -505,11 +505,20 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3 text-center col-padding animate-box">
-												<a href="#" class="work" style="background-image: url(images/Monique\ Fullbody.png);">
+				<div class="col-md-3 text-center col-padding animate-box" style="max-height: fit-content;">
+												<a href="#" class="work" style="background-image: url(images/barca_test_img.JPG);">
 								<div class="desc">
-									<h3>Persons Name</h3>
-									<span>Caption</span>
+									<h3>Barča</h3>
+                  <p>Student</p>
+									<span style="max-height: fit-content;">
+                    I have been learning English with Monique for five years now and during this time we have 
+                    built not only a very friendly but truly wonderful relationship. Her lessons are always tailored 
+                    to my needs – whether it’s grammar, conversation or preparation for an English certificate. 
+                    Every time I leave with the feeling that I’ve made real progress. I always look forward to our 
+                    classes because they are not only fun and educational but also enriching on a personal level. 
+                    I would have a hard time finding a better English teacher – if such a person even exists.
+
+                  </span>
 								</div>
 							</a>
 				</div>
